--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/gsap": "^1.20.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -32,5 +33,8 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vite-plugin-devtools-json": "^0.2.0"
+	},
+	"dependencies": {
+		"gsap": "^3.13.0"
 	}
 }
