--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,4 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: "build/*"
           target: ${{ secrets.SERVER_PATH }}
+          strip_components: 1
