chore(prettier): add github workflows, readme.md and tsconfig.json in prettierignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,12 @@
 # Package Managers
+package.json
 package-lock.json
 pnpm-lock.yaml
 yarn.lock
 bun.lock
 bun.lockb
+
+
+.github/workflows
+README.md
+tsconfig.json
