--- a/.github/workflows/deploy_ftp.yml
+++ b/.github/workflows/deploy_ftp.yml
@@ -27,6 +27,6 @@ jobs:
           username: ${{ secrets.FTP_USR }}
           password: ${{ secrets.FTP_PWD }}
           local-dir: ./build/
-          server-dir: /sites/thomas-ambroise.fr
+          server-dir: /sites/thomas-ambroise.fr/
           protocol: ftp
           port: 22
