chore: change protocol in ftp workflow to ftps

--- a/.github/workflows/deploy_ftp.yml
+++ b/.github/workflows/deploy_ftp.yml
@@ -28,5 +28,5 @@ jobs:
           password: ${{ secrets.FTP_PWD }}
           local-dir: ./build/
           server-dir: /sites/thomas-ambroise.fr/
-          protocol: ftp
+          protocol: ftps
           port: 22
