chore: change protocol in workflow ftp

--- a/.github/workflows/deploy_ftp.yml
+++ b/.github/workflows/deploy_ftp.yml
@@ -28,5 +28,4 @@ jobs:
           password: ${{ secrets.FTP_PWD }}
           local-dir: ./build/
           server-dir: /sites/thomas-ambroise.fr/
-          protocol: ftps
-          port: 22
+          protocol: sftp
